--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,9 @@ a {
 }
 nav a:hover {
 	color: #000;
-	transition: 50		0ms;
+	transition: 500ms;
 }
-a.main, input[type=submit] {
+a.main, button {
 	position: relative;
 	transition: color .5s cubic-bezier(.75,0,.125,1);
 	overflow: hidden;
@@ -66,10 +66,10 @@ a.main, input[type=submit] {
 	display: inline-block;
 	z-index: 0;
 }
-a.main:hover,input[type=submit]:hover {
+a.main:hover,button:hover {
 	color: #fff;
 }
-a.main::before,input[type=submit]::before {
+a.main::before,button::before {
 	position: absolute;
 	font-family: Material Icons,serif;
     background-color: #151515;
@@ -77,7 +77,6 @@ a.main::before,input[type=submit]::before {
 	webkit-transition: -webkit-transform .5s cubic-bezier(.75,0,.125,1);
     transition: -webkit-transform .5s cubic-bezier(.75,0,.125,1);
     transition: transform .5s cubic-bezier(.75,0,.125,1);
-	transition: transform .5s cubic-bezier(.75,0,.125,1),-webkit-transform .5s cubic-bezier(.75,0,.125,1);
 	left: 0;
 	display: flex;
     justify-content: flex-end;
@@ -88,19 +87,22 @@ a.main::before,input[type=submit]::before {
 	color: #fff;
 	z-index: -1;
 	box-sizing: border-box;
-	padding-right: 16px;
+	padding-right: 20px;
 }
-.bgc a.main:hover {
+.bgc a.main:hover, button:hover {
 	color: #091C27;
 }
-.bgc a.main::before {
+.bgc a.main::before, button::before {
 	background-color: #fff;
 	color: #091C27;
 }
 #project a.main::before {
 	content:"arrow_forward";
 }
-a.main:hover::before,input[type=submit]:hover::before{
+button::before {
+	content: "done";
+}
+a.main:hover::before,button:hover::before{
 	transform: translate3d(0,100%,0);
 }
 .container {
@@ -183,13 +185,13 @@ h5 {
 .space-description-btn {
 	margin-top: 24px;
 }
-a.btn, input[type=submit] {
+a.btn, button {
 	font-weight: 600;
 	font-size: 16px;
 	padding: 16px 47px;
 	border: 2px solid #000000;
 }
-input[type=submit] {
+button {
 	background-color: initial;
 	border: 1px solid #fff;
 	color: #fff;
@@ -256,16 +258,34 @@ form {
 	padding-bottom: 144px;
 }
 footer, footer a {
-	background-color: #151515;
+	background-color: #091C27;
 	color: #8A8A8A;
+}
+.bg-black {
+	background-color: #151515;
 }
 footer p.logo {
 	color: #fff;
-	margin-top: 40px;
+	padding-top: 40px;
 	font-weight: 400;
 }
 .bg-wave {
-	background-image: url(./img/wave.svg);
+	background-image: url(../img/wave.svg);
+	height: 20vh;
+	width: 100%;
+	background-repeat: repeat-x;
+    animation: wave 25s linear infinite;
+}
+.reverse {
+	-moz-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
+    -webkit-transform: scaleY(-1);
+    transform: scaleY(-1);
+    filter: FlipV;
+    -ms-filter: "FlipV";
+}
+.black-wave {
+	background-image: url(../img/black-wave.svg);
 }
 footer p {
 	font-size: 14px;
@@ -318,7 +338,6 @@ footer .fab {
 	font-weight: bold;
 	color: #fff;
 }
-wave{0%{background-position-x:0}to{background-position-x:-1600px}}@keyframes wave{0%{background-position-x:0}to{background-position-x:-1600px}}.dd-animated-wave{position:relative;overflow:hidden}.dd-animated-wave--padded{padding-bottom:20vh!important}.dd-animated-wave__wave{background-repeat:repeat-x;height:20vh;width:100%;pointer-events:none;position:absolute;left:0;right:0;bottom:-2px;-webkit-animation:wave 25s linear infinite;animation:wave 25s linear infinite;background-position-y:top}
 @keyframes wave {
 	0%{
 		background-position-x: 0;
