--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,18 @@ button:hover::before {
 .t-center {
 	text-align: center;
 }
+.display-nav {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	top: 0;
+	right: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background-color: black;
+	z-index: 20;
+}
 .d-flex {
 	display: flex;
 	justify-content: space-between;
@@ -519,6 +531,27 @@ footer .fab {
 @media screen and (max-width: 500px) {
 	nav ul {
 		display: none;
+	}
+	.hamburger.is-active .hamburger-inner,
+	.hamburger.is-active .hamburger-inner::before,
+	.hamburger.is-active .hamburger-inner::after {
+		background-color: white !important;
+	}
+	.hamburger.is-active {
+		position: fixed;
+		left: 83%;
+		top: 6%;
+	}
+	nav ul li {
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	nav ul li a {
+		color: white;
+		font-size: 25px;
+	}
+	nav ul li a:hover {
+		color: grey;
 	}
 	nav button.hamburger::before {
 		content: none !important;
